02-monitoring/01-victoriametrics-prometheus/01-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
    - host: "hackathon-starter.naumov.local"
      http:
        paths:
          - pathType: Prefix
            path: /prometheus
            backend:
              service:
                name: prometheus-sys-connect
                port:
                  number: 9090
          - pathType: Prefix
            path: /grafana
            backend:
              service:
                name: grafana-sys-connect
                port:
                  number: 3000
